<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Splash">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bg_splash_2"
        android:scaleType="centerCrop"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/shape_gradient_splash"/>

    <TextView
        android:layout_marginTop="50dp"
        android:id="@+id/place_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/place_name"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@color/dark_grey"
        android:textSize="40dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/place_name"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:text="@string/slogan"
        android:textStyle="bold"
        android:textColor="@color/dark_grey"
        android:textSize="14dp"/>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_centerHorizontal="true"
       android:layout_height="wrap_content"
       android:layout_alignParentBottom="true"
       android:layout_marginBottom="60dp"
       android:orientation="vertical">
       <ImageView
           android:layout_gravity="center_horizontal"
           android:layout_width="80dp"
           android:layout_height="80dp"
           android:src="@drawable/logon"/>

       <TextView
           android:id="@+id/subname"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textAllCaps="true"
           android:textAlignment="center"
           android:text="@string/app_subname"
           android:textStyle="bold"
           android:textColor="@color/light"
           android:textSize="20dp"/>

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textAllCaps="true"
           android:textAlignment="center"
           android:text="@string/author"
           android:textStyle="bold"
           android:textColor="@color/light"
           android:textSize="8dp"/>
   </LinearLayout>

</RelativeLayout>