<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Splash">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_splash_2"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/shape_gradient_splash"/>

    <TextView
        android:id="@+id/place_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/place_name"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/dark_grey"
        android:textSize="40dp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/place_name"
        android:text="@string/slogan"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/dark_grey"
        android:textSize="14dp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/temukan"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/light"
            android:textSize="12dp"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/txt_cari"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/shape_bg_edittext_cari"
                android:hint="@string/hint_cari"
                android:inputType="textCapWords"
                android:padding="12dp"
                android:textColor="@color/light"
                android:textColorHint="@color/light"/>
            <ImageButton
                android:id="@+id/btn_cari"
                android:layout_marginLeft="5dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape_bg_edittext_cari"
                android:src="@drawable/ic_cari_white"
                android:padding="15dp"
                android:textColor="@color/light"/>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logon"/>

        <TextView
            android:id="@+id/subname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_subname"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/light"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/author"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/light"
            android:textSize="8dp"
            android:textStyle="bold"/>
    </LinearLayout>

</RelativeLayout>