<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light"
    android:fillViewport="true"
    tools:context=".activity.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:background="@color/light"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:src="@drawable/bg_splash_3"
                android:scaleType="centerCrop"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:src="@drawable/shape_gradient_splash"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="40dp"
                android:orientation="vertical">
                <ImageView
                    android:layout_gravity="center_horizontal"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/logon"/>

                <TextView
                    android:id="@+id/subname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:textAlignment="center"
                    android:text="@string/place_name"
                    android:textStyle="bold"
                    android:textColor="@color/light"
                    android:textSize="20dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:textAlignment="center"
                    android:text="@string/app_subname"
                    android:textStyle="bold"
                    android:textColor="@color/light"/>


            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="220dp"
                android:background="@color/light">
            </RelativeLayout>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="200dp"
                app:cardElevation="0dp"
                android:background="@color/light"
                app:cardCornerRadius="20dp">
            </androidx.cardview.widget.CardView>


        </RelativeLayout>
        <LinearLayout
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lupa_sandi"
                android:textAllCaps="true"
                android:textSize="18dp"
                android:layout_marginBottom="20dp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Email"
                android:textAllCaps="true"
                android:textStyle="bold" />
            <EditText
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Ketikkan Email"/>
            <Button
                android:id="@+id/btn_masuk"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="PROSES"
                android:background="@color/colorPrimary"
                android:textColor="@color/light"/>
            <LinearLayout
                android:visibility="gone"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Belum memiliki akun? "/>
                <TextView
                    android:id="@+id/txt_lupa_sandi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" daftar"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"/>
            </LinearLayout>
            <LinearLayout
                android:visibility="gone"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <View
                    android:layout_gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="2"
                    android:background="@color/grey"/>
                <TextView
                    android:textAlignment="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/grey"
                    android:text="ATAU"/>
                <View
                    android:layout_gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="2"
                    android:background="@color/grey"/>
            </LinearLayout>
            <LinearLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/info"
                    android:textColor="@color/light"
                    android:text="FACEBOOK"/>
                <Button
                    android:layout_marginLeft="30dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/warning"
                    android:textColor="@color/light"
                    android:text="GOOGLE"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>